<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MAScenario1Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/items_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:layout_marginBottom="@dimen/spacing_normal"
            android:background="@android:color/white"
            android:scrollbars="horizontal"/>

        <android.support.v4.view.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/viewpager_height"
            android:background="@android:color/white" />

        <com.viewpagerindicator.CirclePageIndicator
            android:id="@+id/viewpager_indicator"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:padding="@dimen/spacing_large" />

        <TextView
            style="@style/TextView.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:background="@android:color/white"
            android:gravity="left"
            android:text="@string/text1" />

        <TextView
            style="@style/TextView.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="center_horizontal"
            android:text="@string/text2" />

        <TextView
            style="@style/TextView.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="right"
            android:paddingBottom="@dimen/spacing_normal"
            android:text="@string/text3" />

        <TextView
            android:id="@+id/display_item_textview"
            style="@style/TextView.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:background="@android:color/white"
            android:gravity="left|center_vertical"
            android:hint="@string/hint_text"
            android:padding="@dimen/spacing_large" />

        <LinearLayout
            android:id="@+id/color_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/spacing_normal"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/spacing_xlarge"
            android:paddingLeft="@dimen/spacing_large"
            android:paddingRight="@dimen/spacing_large"
            android:paddingTop="@dimen/spacing_xlarge"
            android:weightSum="3">

            <Button
                android:id="@+id/red_color_button"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/red" />

            <Button
                android:id="@+id/blue_color_button"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/blue" />

            <Button
                android:id="@+id/green_color_button"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/green" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>